<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bluetooth Test</string>

    <!-- Main Activity UI elements -->
    <!--Connection Status Label Values-->
    <string name="no_bluetooth">Bluetooth adapter not found!</string>
    <string name="not_connected">Not Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="unable_to_connect">Unable to Connect!</string>
    <string name="connection_lost">Connection Lost!</string>
    <!--TextViews and Buttons-->
    <string name="connect_to_server">Connect to Server</string>
    <string name="send_data">Apply Device Settings</string>
    <string name="label_slave_address">Configure Slave Address Names</string>
    <string name="label_poll_frequency">Modbus Polling Frequency (mins):</string>
    <string name="label_site_id">Site ID:</string>
    <string name="label_APIInterval">API Reporting Interval (seconds)</string>
    <string name="label_APIInterval_Min">Min</string>
    <string name="label_APIInterval_Max">Max</string>
    <string name="hint_slave_address">enter friendly name</string>
    <string name="hint_poll_frequency">time</string>
    <string name="hint_API_interval">time</string>
    <string name="hint_site_id">0–4294967295</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="hint_friendly_name">Enter Friendly Name</string>
    <string name="sending_data">Settings applied</string>

</resources>
