<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cpe4097.remotesensing.remotebluetoothtest.MainActivity">

    <TextView
        android:id="@+id/lbConnectStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/not_connected"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/btConnect"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/btConnect"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/connect_to_server"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbPollFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_poll_frequency"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPollingFrequency"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/etPollingFrequency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/hint_poll_frequency"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/lbPollFreq"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btConfigSlaveAddressNames" />

    <EditText
        android:id="@+id/etSiteID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/hint_site_id"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/lbSiteID"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPollingFrequency" />

    <TextView
        android:id="@+id/lbSiteID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_site_id"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etSiteID"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btConfigSlaveAddressNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_slave_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btConnect"
        app:layout_constraintHorizontal_bias="0.511" />

    <TextView
        android:id="@+id/lbAPIInterval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_APIInterval"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSiteID" />

    <EditText
        android:id="@+id/etAPIIntervalMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_API_interval"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/lbAPIIntervalMin" />

    <EditText
        android:id="@+id/etAPIIntervalMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_API_interval"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_center_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbAPIIntervalMax" />

    <TextView
        android:id="@+id/lbAPIIntervalMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/label_APIInterval_Max"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_center_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbAPIInterval" />

    <TextView
        android:id="@+id/lbAPIIntervalMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/label_APIInterval_Min"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/lbAPIInterval" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_center_vertical"
        android:foregroundGravity="center_vertical"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
